fix overflow when sized up

--- a/style_mf.css
+++ b/style_mf.css
@@ -206,13 +206,14 @@ aside {
 
 @media (min-width: 700px) {
   body {
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: row;
   }
 
   .container {
     flex: 1;
+    overflow-x: hidden;
   }
 
   header {
